SVN
-------------------------------

XML:   Resolved issue CASTOR-1799 using contribution from Edward Kuns [edward.kuns@aspect.com]
       XML handler & descriptor checkstyle cleanup
       Details: http://jira.codehaus.org/browse/CASTOR-1799
       (Edward - 20070101)

XML:   Resolved issue CASTOR-1792 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 344 'Paren Pad' warnings at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1792
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1790 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Refactored javasource package to resolve 'Design by extension' complaints of checkstyle.
       Details: http://jira.codehaus.org/browse/CASTOR-1790
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1789 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up checkstyle warnings/infos at javasource package of codegen module.
       Details: http://jira.codehaus.org/browse/CASTOR-1789
       (Ralf - 20070101)

XML:   Resolved issue CASTOR-1776 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up checkstyle warnings at anttask module and introduce new CastorCodeGenTask.
       Details: http://jira.codehaus.org/browse/CASTOR-1776
       (Ralf - 20061231)

XML:   Resolved issue CASTOR-1786 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based corrections in codegen
       Details: http://jira.codehaus.org/browse/CASTOR-1786
       (Edward - 20061229)

All:   Resolved issue CASTOR-1785 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update checkstyle to work under UNIX + Windows both
       Details: http://jira.codehaus.org/browse/CASTOR-1785
       (Edward - 20061229)

Ant:   Resolved issue CASTOR-1784 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based corrections in anttask